fixed white space rightside and smoother bg image

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -18,13 +18,6 @@
     font-weight: 700;
 }
 
-.whatAre {
-    color: $content-background-highlight-dark;
-    font-weight: bold;
-    line-height: 200%;
-    word-spacing: 150%;
-}
-
 #searchbar {
     background: $content-background-highlight-dark;
 }
@@ -94,19 +87,20 @@
     .jumbotron #jumbotron-button{font-size: 8px}
     .jumbotron {height: 15vh}
     .jumbotron {background-size: 160%}
+    #welcome-h1 {font-size: 30px}
+    #welcome-text {font-size: 18px}
 }
 
 @media (max-width: 767.98px) {
-    .jumbotron h1{font-size: 25px}
+    .jumbotron h1{font-size: 35px}
     .jumbotron #jumbotron-button{font-size: 12px}
-    .jumbotron {height: 30vh}
+    .jumbotron {height: 25vh}
 }
 
 @media (max-width: 991.98px) {
-    .jumbotron h1{font-size: 35px}
-    .jumbotron #jumbotron-button{font-size: 16px}
+
 }
 
 @media (max-width: 1199.98px) {
-    .jumbotron h1{font-size: 40px;}
+    
 }
